--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^3.26.1",
     "cors": "^2.8.5",
     "css-loader": "^6.7.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.12.1",
