--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "style-loader": "^3.3.1",
     "uuid": "^9.0.0",
     "webpack": "^5.75.0",
